<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pump_status">Pump Status</string>
    <string name="update_screen">Update</string>
    <string name="temp_current">Current Temp</string>
    <string name="app_name">Pool Pump Controller</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_main_activity_actions">My Actions</string>
    <string name="action_search">Search_it</string>
	<string name="pump_stat">Pump Status</string>
	<string name="send_data">SEND</string>
	<string name="set_start">Start Time</string>
	<string name="set_curr">Current Time</string>
	<string name="set">SET</string>
	<string name="start_time">00:00 AM</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="avg_runtime">Avg Run Time</string>
	<string name="hour">Hr:</string>
	<string name="minute">Min:</string>
	<string name="zero">00</string>
	<string name="toggle_btn">Toggle Button</string>
	<array name="colors_array">
            <item>Red</item>
            <item>Green</item>
            <item>Blue</item>
    </array>
</resources>
